Bug 619358 - compact crash [@ nsFolderCompactState::OnStopRunningUrl(nsIURI*, unsigned int)]; r=Standard8